Done config DB without Data - run Pass message 200

--- a/BookService.Testing/app.config
+++ b/BookService.Testing/app.config
@@ -1,12 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" /></configSections>
-  
-  
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
+  </configSections>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -39,25 +37,26 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-
   <connectionStrings>
     <add name="BookServiceContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=BookServiceContext-20171126185836; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|\App_Data\BookServiceContext-20171126185836.mdf" providerName="System.Data.SqlClient" />
-
     <!--<add name="BookServiceContext" connectionString="Server=LEEHUYDESKTOP\SQLEXPRESS;Database=book;User Id=lee_hu_y;Password=123456;" providerName="System.Data.SqlClient" />-->
     <!--<<add name="BookServiceContext" connectionString="Data Source=LEEHUYDESKTOP\SQLEXPRESS; Initial Catalog=BookServiceContext-20171126185836; Integrated Security=True; User ID=lee_hu_y;Password=1234567; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|BookServiceContext-20171126185837.mdf"
   providerName="System.Data.SqlClient" />-->
   </connectionStrings>
-  
-
-  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
     </providers>
   </entityFramework>
-  
-
-<specFlow>
+  <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-  </specFlow></configuration>
+  </specFlow>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite.EF6" />
+      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
+    <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
+  </system.data>
+</configuration>
