--- a/BookService.Testing/packages.config
+++ b/BookService.Testing/packages.config
@@ -2,18 +2,38 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.Build.Framework" version="15.5.180" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.0-preview1" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0-preview1" targetFramework="net461" />
   <package id="Microsoft.Owin.Hosting" version="4.0.0-preview1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="4.0.0-preview1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0-preview1" targetFramework="net461" />
-  <package id="Microsoft.Owin.Testing" version="4.0.0-preview1" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.ConnectionInfo.dll" version="1.0.1" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Management.Sdk.Sfc.dll" version="1.0.1" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Smo.dll" version="1.0.1" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1-beta1" targetFramework="net461" />
+  <package id="NUnit" version="3.9.0" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="SpecFlow" version="2.2.1" targetFramework="net461" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net461" />
+  <package id="System.Data.SqlClient" version="4.4.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.106.0" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net461" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net461" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net461" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Parallel" version="4.0.1" targetFramework="net461" />
+  <package id="System.Threading.Thread" version="4.0.0" targetFramework="net461" />
 </packages>
