--- a/BookService.Testing/packages.config
+++ b/BookService.Testing/packages.config
@@ -2,10 +2,14 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.Build.Framework" version="15.5.180" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.0-preview1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="2.0.2" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0-preview1" targetFramework="net461" />
   <package id="Microsoft.Owin.Hosting" version="4.0.0-preview1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="4.0.0-preview1" targetFramework="net461" />
