--- a/BookService.Testing/app.config
+++ b/BookService.Testing/app.config
@@ -58,5 +58,6 @@
     <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
   </system.data>
 <specFlow>
+   <unitTestProvider name="MSTest"></unitTestProvider>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
   </specFlow></configuration>
