--- a/BookService.Testing/packages.config
+++ b/BookService.Testing/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Ghpr.Core" version="0.7.0" targetFramework="net461" />
+  <package id="Ghpr.NUnit.SpecFlowPlugin" version="0.7.0" targetFramework="net461" />
+  <package id="Ghpr.SpecFlow.Common" version="0.7.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
@@ -21,8 +24,10 @@
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1-beta1" targetFramework="net461" />
   <package id="NUnit" version="3.9.0" targetFramework="net461" />
+  <package id="NUnit.Engine" version="3.7.0" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="SpecFlow" version="2.2.1" targetFramework="net461" />
+  <package id="SpecFlow.CustomPlugin" version="2.2.1" targetFramework="net461" />
   <package id="System.Collections" version="4.0.11" targetFramework="net461" />
   <package id="System.Data.SqlClient" version="4.4.0" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.106.0" targetFramework="net461" />
